--- a/ExampleApp/Components/App.razor
+++ b/ExampleApp/Components/App.razor
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <link rel="stylesheet" href="app.css?v=@randomNum" />
     <link rel="stylesheet" href="ExampleApp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
